exports[`test renders a banner that has basic information 1`] = `
<div>
  <section
    additionalDetails={null}
    age="24"
    applicationRows={Array []}
    className="terra-DemographicsBanner"
    dateOfBirth="March 30, 2017"
    deceasedDate={null}
    gender="F"
    gestationalAge={null}
    identifiers={Object {}}
    intl={
      Object {
        "defaultFormats": Object {},
        "defaultLocale": "en",
        "formatDate": [Function],
        "formatHTMLMessage": [Function],
        "formatMessage": [Function],
        "formatNumber": [Function],
        "formatPlural": [Function],
        "formatRelative": [Function],
        "formatTime": [Function],
        "formats": Object {},
        "formatters": Object {
          "getDateTimeFormat": [Function],
          "getMessageFormat": [Function],
          "getNumberFormat": [Function],
          "getPluralFormat": [Function],
          "getRelativeFormat": [Function],
        },
        "locale": "en",
        "messages": Object {
          "Terra.demographicsBanner.dateOfBirth": "DOB: <b>{dob}</b>",
          "Terra.demographicsBanner.deceased": "Deceased: <b>{deceasedDate}</b>",
          "Terra.demographicsBanner.gestationalAge": "GA: <b>{gestationalAge}</b>",
          "Terra.demographicsBanner.noDataProvided": "--",
          "Terra.demographicsBanner.postMenstrualAge": "PMA: <b>{postMenstrualAge}</b>",
        },
        "now": [Function],
        "textComponent": "span",
      }
    }
    locale="en"
    personName="Terra Demographics Banner"
    photo={null}
    postMenstrualAge={null}
    preferredFirstName={null}
    sex={null}>
    <div />
    <div
      className="terra-DemographicsBanner--content">
      <div
        className="terra-DemographicsBanner--row">
        <h1>
          Terra Demographics Banner
        </h1>
        <div
          className="terra-DemographicsBanner--application-content" />
      </div>
      <div
        className="terra-DemographicsBanner--row">
        <div
          className="terra-DemographicsBanner--person-details">
          <span>
            <b>
              24
            </b>
          </span>
          <span>
            <b>
              F
            </b>
          </span>
          <span>
            <span
              dangerouslySetInnerHTML={
                Object {
                  "__html": "DOB: <b>March 30, 2017</b>",
                }
              } />
          </span>
        </div>
        <div
          className="terra-DemographicsBanner--identifiers" />
      </div>
    </div>
  </section>
</div>
`;

exports[`test renders a blank banner properly 1`] = `
<div>
  <section
    additionalDetails={null}
    age={null}
    applicationRows={Array []}
    className="terra-DemographicsBanner"
    dateOfBirth={null}
    deceasedDate={null}
    gender={null}
    gestationalAge={null}
    identifiers={Object {}}
    intl={
      Object {
        "defaultFormats": Object {},
        "defaultLocale": "en",
        "formatDate": [Function],
        "formatHTMLMessage": [Function],
        "formatMessage": [Function],
        "formatNumber": [Function],
        "formatPlural": [Function],
        "formatRelative": [Function],
        "formatTime": [Function],
        "formats": Object {},
        "formatters": Object {
          "getDateTimeFormat": [Function],
          "getMessageFormat": [Function],
          "getNumberFormat": [Function],
          "getPluralFormat": [Function],
          "getRelativeFormat": [Function],
        },
        "locale": "en",
        "messages": Object {
          "Terra.demographicsBanner.dateOfBirth": "DOB: <b>{dob}</b>",
          "Terra.demographicsBanner.deceased": "Deceased: <b>{deceasedDate}</b>",
          "Terra.demographicsBanner.gestationalAge": "GA: <b>{gestationalAge}</b>",
          "Terra.demographicsBanner.noDataProvided": "--",
          "Terra.demographicsBanner.postMenstrualAge": "PMA: <b>{postMenstrualAge}</b>",
        },
        "now": [Function],
        "textComponent": "span",
      }
    }
    locale="en"
    personName={null}
    photo={null}
    postMenstrualAge={null}
    preferredFirstName={null}
    sex={null}>
    <div />
    <div
      className="terra-DemographicsBanner--content">
      <div
        className="terra-DemographicsBanner--row">
        <h1>
          <span
            dangerouslySetInnerHTML={
              Object {
                "__html": "--",
              }
            } />
        </h1>
        <div
          className="terra-DemographicsBanner--application-content" />
      </div>
      <div
        className="terra-DemographicsBanner--row">
        <div
          className="terra-DemographicsBanner--person-details">
          <span>
            <b>
              --
            </b>
          </span>
          <span>
            <b>
              --
            </b>
          </span>
          <span>
            <span
              dangerouslySetInnerHTML={
                Object {
                  "__html": "DOB: <b>--</b>",
                }
              } />
          </span>
        </div>
        <div
          className="terra-DemographicsBanner--identifiers" />
      </div>
    </div>
  </section>
</div>
`;

exports[`test renders the banner appropriately for a deceased person 1`] = `
<div>
  <section
    additionalDetails={null}
    age="24"
    applicationRows={Array []}
    className="terra-DemographicsBanner terra-DemographicsBanner--deceased"
    dateOfBirth="June 15, 2014"
    deceasedDate="March 30, 2017"
    gender="F"
    gestationalAge={null}
    identifiers={Object {}}
    intl={
      Object {
        "defaultFormats": Object {},
        "defaultLocale": "en",
        "formatDate": [Function],
        "formatHTMLMessage": [Function],
        "formatMessage": [Function],
        "formatNumber": [Function],
        "formatPlural": [Function],
        "formatRelative": [Function],
        "formatTime": [Function],
        "formats": Object {},
        "formatters": Object {
          "getDateTimeFormat": [Function],
          "getMessageFormat": [Function],
          "getNumberFormat": [Function],
          "getPluralFormat": [Function],
          "getRelativeFormat": [Function],
        },
        "locale": "en",
        "messages": Object {
          "Terra.demographicsBanner.dateOfBirth": "DOB: <b>{dob}</b>",
          "Terra.demographicsBanner.deceased": "Deceased: <b>{deceasedDate}</b>",
          "Terra.demographicsBanner.gestationalAge": "GA: <b>{gestationalAge}</b>",
          "Terra.demographicsBanner.noDataProvided": "--",
          "Terra.demographicsBanner.postMenstrualAge": "PMA: <b>{postMenstrualAge}</b>",
        },
        "now": [Function],
        "textComponent": "span",
      }
    }
    locale="en"
    personName="Old Terra Demographics Banner"
    photo={null}
    postMenstrualAge={null}
    preferredFirstName={null}
    sex={null}>
    <div />
    <div
      className="terra-DemographicsBanner--content">
      <div
        className="terra-DemographicsBanner--row">
        <h1>
          Old Terra Demographics Banner
        </h1>
        <div
          className="terra-DemographicsBanner--application-content" />
      </div>
      <div
        className="terra-DemographicsBanner--row">
        <div
          className="terra-DemographicsBanner--person-details">
          <span>
            <b>
              24
            </b>
          </span>
          <span>
            <b>
              F
            </b>
          </span>
          <span>
            <span
              dangerouslySetInnerHTML={
                Object {
                  "__html": "DOB: <b>June 15, 2014</b>",
                }
              } />
          </span>
          <span>
            <span
              dangerouslySetInnerHTML={
                Object {
                  "__html": "Deceased: <b>March 30, 2017</b>",
                }
              } />
          </span>
        </div>
        <div
          className="terra-DemographicsBanner--identifiers" />
      </div>
    </div>
  </section>
</div>
`;

exports[`test renders the banner properly for a deceased person with additional application content 1`] = `
<div>
  <section
    additionalDetails={
      <span
        className="risk-score">
        5%
      </span>
    }
    age="25 Years"
    applicationRows={
      Array [
        Object {
          "Address": "1501 Walnut St. Apt #123",
          "City": "Kansas City MO",
        },
        Object {
          "ZIP": 64108,
        },
      ]
    }
    className="terra-DemographicsBanner"
    dateOfBirth="May 9, 1993"
    deceased="March 5, 2016"
    deceasedDate={null}
    gender="Male"
    gestationalAge={null}
    identifiers={
      Object {
        "MRN": 12343,
        "REA": "3JSDA",
      }
    }
    intl={
      Object {
        "defaultFormats": Object {},
        "defaultLocale": "en",
        "formatDate": [Function],
        "formatHTMLMessage": [Function],
        "formatMessage": [Function],
        "formatNumber": [Function],
        "formatPlural": [Function],
        "formatRelative": [Function],
        "formatTime": [Function],
        "formats": Object {},
        "formatters": Object {
          "getDateTimeFormat": [Function],
          "getMessageFormat": [Function],
          "getNumberFormat": [Function],
          "getPluralFormat": [Function],
          "getRelativeFormat": [Function],
        },
        "locale": "en",
        "messages": Object {
          "Terra.demographicsBanner.dateOfBirth": "DOB: <b>{dob}</b>",
          "Terra.demographicsBanner.deceased": "Deceased: <b>{deceasedDate}</b>",
          "Terra.demographicsBanner.gestationalAge": "GA: <b>{gestationalAge}</b>",
          "Terra.demographicsBanner.noDataProvided": "--",
          "Terra.demographicsBanner.postMenstrualAge": "PMA: <b>{postMenstrualAge}</b>",
        },
        "now": [Function],
        "textComponent": "span",
      }
    }
    locale="en"
    personName="Johnathon Doe"
    photo={
      <img
        alt="My Cat"
        src="http://lorempixel.com/100/100/animals/7/" />
    }
    postMenstrualAge={null}
    preferredFirstName="John"
    sex={null}>
    <div>
      <img
        alt="My Cat"
        src="http://lorempixel.com/100/100/animals/7/" />
    </div>
    <div
      className="terra-DemographicsBanner--content">
      <div
        className="terra-DemographicsBanner--row">
        <h1>
          Johnathon Doe
          <span
            className="terra-DemographicsBanner--preferred-first-name">
            John
          </span>
        </h1>
        <div
          className="terra-DemographicsBanner--application-content">
          <span
            className="risk-score">
            5%
          </span>
        </div>
      </div>
      <div
        className="terra-DemographicsBanner--row">
        <div
          className="terra-DemographicsBanner--person-details">
          <span>
            <b>
              25 Years
            </b>
          </span>
          <span>
            <b>
              Male
            </b>
          </span>
          <span>
            <span
              dangerouslySetInnerHTML={
                Object {
                  "__html": "DOB: <b>May 9, 1993</b>",
                }
              } />
          </span>
        </div>
        <div
          className="terra-DemographicsBanner--identifiers">
          <span>
            MRN
            : 
            <b>
              12343
            </b>
          </span>
          <span>
            REA
            : 
            <b>
              3JSDA
            </b>
          </span>
        </div>
      </div>
      <div
        className="terra-DemographicsBanner--row">
        <span>
          Address
          : 
          <b>
            1501 Walnut St. Apt #123
          </b>
        </span>
        <span>
          City
          : 
          <b>
            Kansas City MO
          </b>
        </span>
      </div>
      <div
        className="terra-DemographicsBanner--row">
        <span>
          ZIP
          : 
          <b>
            64108
          </b>
        </span>
      </div>
    </div>
  </section>
</div>
`;

exports[`test renders the banner that contains additional information 1`] = `
<div>
  <section
    additionalDetails={
      <span
        className="risk-score">
        5%
      </span>
    }
    age="25 Years"
    applicationRows={
      Array [
        Object {
          "Address": "1501 Walnut St. Apt #123",
          "City": "Kansas City MO",
        },
        Object {
          "ZIP": 64108,
        },
      ]
    }
    className="terra-DemographicsBanner"
    dateOfBirth="May 9, 1993"
    deceasedDate={null}
    gender="Male"
    gestationalAge={null}
    identifiers={
      Object {
        "MRN": 12343,
        "REA": "3JSDA",
      }
    }
    intl={
      Object {
        "defaultFormats": Object {},
        "defaultLocale": "en",
        "formatDate": [Function],
        "formatHTMLMessage": [Function],
        "formatMessage": [Function],
        "formatNumber": [Function],
        "formatPlural": [Function],
        "formatRelative": [Function],
        "formatTime": [Function],
        "formats": Object {},
        "formatters": Object {
          "getDateTimeFormat": [Function],
          "getMessageFormat": [Function],
          "getNumberFormat": [Function],
          "getPluralFormat": [Function],
          "getRelativeFormat": [Function],
        },
        "locale": "en",
        "messages": Object {
          "Terra.demographicsBanner.dateOfBirth": "DOB: <b>{dob}</b>",
          "Terra.demographicsBanner.deceased": "Deceased: <b>{deceasedDate}</b>",
          "Terra.demographicsBanner.gestationalAge": "GA: <b>{gestationalAge}</b>",
          "Terra.demographicsBanner.noDataProvided": "--",
          "Terra.demographicsBanner.postMenstrualAge": "PMA: <b>{postMenstrualAge}</b>",
        },
        "now": [Function],
        "textComponent": "span",
      }
    }
    locale="en"
    personName="Johnathon Doe"
    photo={
      <img
        alt="My Cat"
        src="http://lorempixel.com/100/100/animals/7/" />
    }
    postMenstrualAge={null}
    preferredFirstName="John"
    sex={null}>
    <div>
      <img
        alt="My Cat"
        src="http://lorempixel.com/100/100/animals/7/" />
    </div>
    <div
      className="terra-DemographicsBanner--content">
      <div
        className="terra-DemographicsBanner--row">
        <h1>
          Johnathon Doe
          <span
            className="terra-DemographicsBanner--preferred-first-name">
            John
          </span>
        </h1>
        <div
          className="terra-DemographicsBanner--application-content">
          <span
            className="risk-score">
            5%
          </span>
        </div>
      </div>
      <div
        className="terra-DemographicsBanner--row">
        <div
          className="terra-DemographicsBanner--person-details">
          <span>
            <b>
              25 Years
            </b>
          </span>
          <span>
            <b>
              Male
            </b>
          </span>
          <span>
            <span
              dangerouslySetInnerHTML={
                Object {
                  "__html": "DOB: <b>May 9, 1993</b>",
                }
              } />
          </span>
        </div>
        <div
          className="terra-DemographicsBanner--identifiers">
          <span>
            MRN
            : 
            <b>
              12343
            </b>
          </span>
          <span>
            REA
            : 
            <b>
              3JSDA
            </b>
          </span>
        </div>
      </div>
      <div
        className="terra-DemographicsBanner--row">
        <span>
          Address
          : 
          <b>
            1501 Walnut St. Apt #123
          </b>
        </span>
        <span>
          City
          : 
          <b>
            Kansas City MO
          </b>
        </span>
      </div>
      <div
        className="terra-DemographicsBanner--row">
        <span>
          ZIP
          : 
          <b>
            64108
          </b>
        </span>
      </div>
    </div>
  </section>
</div>
`;
